--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4",
+    "vue-fuse": "^3.0.0",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
